--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11325,3 +11325,8 @@ textarea.form-control-lg {
   color: white;
   text-decoration: none !important;
 }
+
+.avatar-img {
+  width: 48px;
+  height: 48px;
+}
